; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-socket-buffer-size.c_check_buffer_size.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-socket-buffer-size.c_check_buffer_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @check_buffer_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_buffer_size(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @uv_recv_buffer_size(i32* %4, i32* %3)
  %6 = icmp eq i64 0, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = icmp sgt i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  store i32 10000, i32* %3, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = call i64 @uv_recv_buffer_size(i32* %13, i32* %3)
  %15 = icmp eq i64 0, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @ASSERT(i32 %16)
  store i32 0, i32* %3, align 4
  %18 = load i32*, i32** %2, align 8
  %19 = call i64 @uv_recv_buffer_size(i32* %18, i32* %3)
  %20 = icmp eq i64 0, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @ASSERT(i32 %21)
  %23 = load i32, i32* %3, align 4
  %24 = icmp eq i32 %23, 10000
  br i1 %24, label %28, label %25

25:                                               ; preds = %1
  %26 = load i32, i32* %3, align 4
  %27 = icmp eq i32 %26, 20000
  br label %28

28:                                               ; preds = %25, %1
  %29 = phi i1 [ true, %1 ], [ %27, %25 ]
  %30 = zext i1 %29 to i32
  %31 = call i32 @ASSERT(i32 %30)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_recv_buffer_size(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
